# TreeNode.RapidNJ

./: .gitignore  .gitmodules  BuildTests.cmd  Readme.md  TreeNode.RapidNJ.sln
RapidNJTestHost/Properties/PublishProfiles/: mac-arm64.pubxml  win-arm64.pubxml
TestHost/: Program.cs  TestHost.csproj
TestHost/Properties/PublishProfiles/: linux-arm64.pubxml  linux-x64.pubxml  mac-x64.pubxml  win-x64.pubxml  win-x86.pubxml
Tests/: Tests.csproj  TestsFromDNAAlignments.cs  TestsFromDistanceMatrices.cs  TestsFromProteinAligments.cs
Tests/Data/: AlignmentDNA.fas  AlignmentProtein.fas
TreeNode.RapidNJ/: RapidNJ.cs  TreeNode.RapidNJ.csproj
native/: CMakeLists.txt  build.cmd  build.sh
native/rapidNJWrapper/: CMakeLists.txt  dataLoaderPointer.hpp  rapidNJWrapper.cpp  rapidNJWrapper.h
native/rapidNJWrapper/include/all/: JCdistance.hpp  dataloaderPhylip.hpp
native/rapidNJWrapper/include/win-all/: pthread.h
